# BTC-COIN-Relative-Value-Statistical-Arbitrage

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
core/backtest/: __init__.py  backtest.py
core/modules/config/: __init__.py  config.py
core/modules/data/: __init__.py  funding.py  loader.py
core/modules/exchange/: __init__.py  exchange.py  manager.py
core/modules/logger/: __init__.py
core/modules/metrics/: __init__.py  performance.py
core/modules/models/: __init__.py  funding.py  order.py  position_lot.py  trade.py
core/modules/position_sizing/: __init__.py  pair_sizing.py
core/modules/reporting/: __init__.py  export.py  plots.py  trade_review.py  utils.py
core/modules/risk/: __init__.py  base.py  dollar_neutral.py  hedge_ratio.py  manager.py  pair_completeness.py  position_hedge_ratio.py  utils.py
core/modules/signals/: __init__.py  base.py  cointegration.py  factory.py  funding_filter.py  momentum_filter.py  ratio.py  zscore.py
core/modules/strategy/: __init__.py  base.py  factory.py  pair_trading_strategy.py
scripts/: generate_configs.py  run_backtest.py  run_config_sweep.py
